turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:5: error: not found: value getColorSol
	x=getColorSol();
          ^